# beyer-second-brain

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: git-state.md  judge.md  phase-status.md  security.md  systems-check.md
.github/workflows/: main_func-secondbrain.yml
docs/: IMPLEMENTATION_GUIDE.md  SEMANTIC_SEARCH_GUIDE.md
functions/: CLAUDE.md  function_app.py  requirements.txt
functions/ingest_document/: __init__.py  function.json
functions/shared/: __init__.py  chunker.py  concepts.py  embeddings.py  graph.py  logging_utils.py  parser.py  storage.py  validation.py
functions/shared/db/: models.py
infrastructure/: AZURE_PORTAL_SETUP.md  deploy.sh  main.bicep  parameters.json
scripts/: cross_source_pass.py  embedding_similarity_pass.py  export_azure_config.sh  init_db.py  test_connectivity.py
shared/: config.py
shared/db/: connection.py  models.py
src/db/: connection.py  models.py
