[project]
name = "second-brain"
version = "0.1.0"
description = "Personal knowledge system for data leadership books"
requires-python = ">=3.11"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    
    # Azure
    "azure-storage-blob>=12.19.0",
    
    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    
    # PDF Processing
    "pymupdf>=1.23.0",
    
    # Embeddings
    "openai>=1.0.0",
    
    # App
    "streamlit>=1.30.0",
    
    # Utilities
    "tiktoken>=0.5.0",  # Token counting
    "tqdm>=4.66.0",     # Progress bars
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
